--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
-body{
-    /* background-image: url("../images/bg.jpg"); */
-}
+
+body {
+    background-image: url("../images/aidan-formigoni-564473-unsplash.jpg") ;
+    background-size: cover;
+
+  }
+
+
+  #full{
+      margin-top: 100px;
+  }
+  #content{
+      text-align: center;
+  }
