--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,3 +12,13 @@ body {
   #content{
       text-align: center;
   }
+
+[type=button] {
+background-color: rgb(175, 55, 55);
+color:white;
+}
+
+[type=button]:hover {
+    background-color: rgb(90, 26, 26);
+    color:white;
+    }
