--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,22 @@
 body {
     background-image: url("../images/aidan-formigoni-564473-unsplash.jpg") ;
     background-size: cover;
-
   }
 
 
   #full{
       margin-top: 100px;
+
   }
   #content{
       text-align: center;
+      font-family: 'Gloria Hallelujah', cursive;
   }
 
 [type=button] {
 background-color: rgb(175, 55, 55);
 color:white;
+width: 100px;
 }
 
 [type=button]:hover {
@@ -27,3 +29,9 @@ img {
     height: 200px;
     width: 200px;
 }
+
+#gameinfo{
+    font-family: 'Caveat', cursive;
+    font-size: 30px;
+}
+
